@@ -7,9 +7,9 @@ DIST_NAME = \
 DIST_VERSION = \
   $(shell grep "_VERSION=" $(VER_FILE) | awk -F\" '{print $$2}')
 
-LIB_TGT = $(SRC_DIR)/$(DIST_NAME)
+EXE_TGT = $(SRC_DIR)/$(DIST_NAME)
 
-LIB_SRC_CORE_LIST = \
+EXE_SRC_CORE_LIST = \
   src/util.sh \
   src/module.sh \
   src/root.sh \
@@ -27,19 +27,36 @@ LIB_SRC_CORE_LIST = \
   src/module_this.sh \
   src/engine.sh
 
-LIB_SRC_EXTRA_LIST = \
+EXE_SRC_EXTRA_LIST = \
   src/job.sh \
   src/state.sh \
   src/prop_file.sh \
   src/net_cfg.sh \
   src/notif_sms_free.sh
 
+EXE_SRC_MAIN_LIST = \
+  src/main_tpl.sh \
+  src/main_tpl_makefile \
+  Makefile \
+  src/main_tpl_makefile_eof \
+  src/main.sh
+
 SRC_LIST = \
   src/define.sh \
   src/util_list.sh \
-  $(LIB_SRC_CORE_LIST) \
-  $(LIB_SRC_EXTRA_LIST)
+  $(EXE_SRC_CORE_LIST) \
+  $(EXE_SRC_EXTRA_LIST) \
+  $(EXE_SRC_MAIN_LIST)
 
-EXTRA_DIST = ChangeLog TODO test/test.sh
+EXTRA_DIST = \
+  ChangeLog \
+  TODO \
+  test/test.sh \
+  test/cfg.sh \
+  test/init.sh \
+  test/module.sh
 
-EXTRA_CLEAN = test/*.log test/test.prop
+EXTRA_CLEAN = \
+  test/log \
+  test/notif \
+  test/test.prop
