@@ -1,0 +1,5 @@
+################################################################################
+################################################################################
+
+soaf_main_tpl_makefile() {
+	cat << _EOF_
